WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115122
Setting an inline style property to "" shouldn't cause style recalc unless the property was present.
https://bugs.webkit.org/show_bug.cgi?id=115122
Summary
Setting an inline style property to "" shouldn't cause style recalc unless th...
Andreas Kling
Reported
2013-04-24 12:46:21 PDT
E.g element.style.display = "" should be a no-op if there is no display property in the element's inline style.
Attachments
Patch
(1.92 KB, patch)
2013-04-24 12:47 PDT
,
Andreas Kling
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-04-24 12:47:44 PDT
Created
attachment 199511
[details]
Patch
Andreas Kling
Comment 2
2013-04-24 12:58:25 PDT
Committed
r149059
: <
http://trac.webkit.org/changeset/149059
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug